# telepathy-fetion

./: CMakeLists.txt  conn-aliasing.c  conn-aliasing.h  conn-avatars.c  conn-avatars.h  conn-presence.c  conn-presence.h  connection-manager.c  connection-manager.h  connection.c  connection.h  im-channel.c  im-channel.h  im-factory.c  im-factory.h  main.c  protocol.c  protocol.h  roster.c  roster.h  todo.txt
debian/: changelog  control
lib/: account.c  account.h  blist.c  blist.h  config.c  config.h  confirm.c  confirm.h  confirm_arm.c  connect.c  conv.c  conv.h  module.c  module.h
plugin/: fetion.c  fetion.h  fx_buddy.c  fx_login.c  fx_msg.h
share/accounts/providers/: openfetion.provider
share/accounts/services/: openfetion.service
share/applications/: telepathy-fetion.desktop
share/dbus-1/services/: org.freedesktop.Telepathy.ConnectionManager.openfetion.service
share/telepathy/managers/: fetion.manager
